<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:icon="@mipmap/home60"
            android:title="TestHome"
            android:visible="false"/>
        <item
            android:id="@+id/Home"
            android:icon="@mipmap/home60"
            android:title="Home" />
        <item
            android:id="@+id/nav_about"
            android:icon="@mipmap/bottomuser"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_local_phone_black_24dp"
            android:title="@string/contact" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="Share">
        </item>

        <item
            android:id="@+id/nav_tc"
            android:icon="@drawable/ic_buffer"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_refund_cancellation"
            android:icon="@drawable/ic_refund_policy"
            android:title="@string/refund_cancellation"/>

        <item
            android:id="@+id/nav_privacy_policy"
            android:icon="@drawable/ic_privacy_policy"
            android:title="@string/privacyp" />

        <item
        android:id="@+id/nav_offers"
        android:icon="@mipmap/ic_offer"
        android:title="@string/offers" />

        <item
            android:id="@+id/nav_notification"
            android:icon="@mipmap/newfor"
            android:title="@string/edit"/>

        <item
            android:id="@+id/nav_faq"
            android:icon="@mipmap/ic_faq"
            android:title="@string/become"
            android:visible="false"/>

        <item
            android:id="@+id/nav_logout"
            android:icon="@mipmap/logout"
            android:title="@string/logout" />
    </group>

</menu>