<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:id="@+id/main_layout">
    <LinearLayout
        android:id="@+id/ivlogo"
        android:layout_width="200dp"
        android:layout_marginTop="@dimen/height30"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:src="@mipmap/logo"
            android:scaleType="fitXY"
            android:layout_centerHorizontal="true"/>
    </LinearLayout>
    <ScrollView
        android:id="@+id/scrollview_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivlogo"
        android:fillViewport="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/height30"
        android:layout_marginLeft="@dimen/register_universal_margin"
        android:layout_marginRight="@dimen/register_universal_margin"
        android:layout_marginBottom="@dimen/dimen_20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:inputType="textCapWords"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/text_size_mid"
            android:textColor="@color/light_black"
            android:backgroundTint="@color/gray"
            android:maxLines="1"
            android:maxLength="28"/>

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:inputType="textCapWords"
            android:textColorHint="@color/gray"
            android:layout_marginTop="@dimen/bottom_text_margin"
            android:textSize="@dimen/text_size_mid"
            android:textColor="@color/light_black"
            android:backgroundTint="@color/gray"
            android:maxLines="1"
            android:maxLength="28"/>

        <EditText
            android:id="@+id/etphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="phone"
            android:layout_marginTop="@dimen/bottom_text_margin"
            android:textColorHint="@color/gray"
            android:backgroundTint="@color/gray"
            android:textSize="@dimen/text_size_mid"
            android:textColor="@color/light_black"
            android:maxLines="1"
            android:maxLength="13"/>
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="@dimen/bottom_text_margin"
            android:textColorHint="@color/gray"
            android:backgroundTint="@color/gray"
            android:textSize="@dimen/text_size_mid"
            android:textColor="@color/light_black"
            android:maxLines="1"
            android:maxLength="48"/>
        <EditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/bottom_text_margin"
            android:textColorHint="@color/gray"
            android:backgroundTint="@color/gray"
            android:textSize="@dimen/text_size_mid"
            android:textColor="@color/light_black"
            android:maxLines="1" />
        <EditText
            android:id="@+id/etConfirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm"
            android:layout_marginTop="@dimen/bottom_text_margin"
            android:textColorHint="@color/gray"
            android:backgroundTint="@color/gray"
            android:textSize="@dimen/text_size_mid"
            android:inputType="textPassword"
            android:textColor="@color/light_black"
            android:maxLines="1" />


    </LinearLayout>
    </RelativeLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scrollview_reg"
        android:layout_alignParentBottom="true">
    <LinearLayout
        android:id="@+id/llSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_45dp"
            android:textColor="@android:color/white"
            android:background="@drawable/custom_button"
            android:textSize="@dimen/button_text_size_medium"
            android:text="@string/reg_button"
            android:layout_gravity="center"
            android:gravity="center"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llSignUp"
        android:padding="@dimen/margin10">

        <TextView
            android:id="@+id/tv_terms_cond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="">
        </TextView>
    </LinearLayout>

        <LinearLayout
            android:id="@+id/llbottom"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dp"
            android:background="@mipmap/login_bg">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/bottom_text_margin"
                    android:gravity="center"
                    android:text="@string/account_have"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/text_size_mid" />

                <TextView
                    android:id="@+id/tvlogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/text_margin_minimum"
                    android:gravity="center"
                    android:text="@string/sign"
                    android:textColor="@color/light_red"
                    android:textSize="@dimen/text_size_mid" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
    <FrameLayout
        android:id="@+id/frame_frag_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</RelativeLayout>