<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom">

            <RelativeLayout
                android:id="@+id/ivlogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin50"
                android:layout_alignParentTop="true">
                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:src="@mipmap/logo"
                    android:scaleType="fitXY"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/light_red"
                android:text="@string/capsResetPass"
                android:textSize="@dimen/standard_text_size"
                android:layout_below="@+id/ivlogo"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="@dimen/margin20"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_title"
                android:layout_marginLeft="@dimen/register_universal_margin"
                android:layout_marginTop="@dimen/margin20"
                android:layout_marginRight="@dimen/register_universal_margin"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etOTP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/bottom_text_margin"
                    android:backgroundTint="@color/gray"
                    android:hint="@string/otp"
                    android:inputType="number"
                    android:maxLength="48"
                    android:maxLines="1"
                    android:textColor="@color/light_black"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/text_size_mid" />

                <EditText
                    android:id="@+id/etNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/bottom_text_margin"
                    android:backgroundTint="@color/gray"
                    android:hint="@string/newPassword"
                    android:inputType="textPassword"
                    android:maxLength="48"
                    android:maxLines="1"
                    android:textColor="@color/light_black"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/text_size_mid" />

                <EditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/bottom_text_margin"
                    android:backgroundTint="@color/gray"
                    android:hint="@string/confirmPass"
                    android:inputType="textPassword"
                    android:maxLength="48"
                    android:maxLines="1"
                    android:textColor="@color/light_black"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/text_size_mid" />

                <LinearLayout
                    android:id="@+id/llSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/buttion_height"
                    android:layout_marginTop="@dimen/margin20"
                    android:background="@drawable/custom_button">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/submit"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/button_text_size_medium" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
    <RelativeLayout
        android:id="@+id/llbottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:scaleType="fitXY"
            android:src="@mipmap/login_bg" />
    </RelativeLayout>


</RelativeLayout>