<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".view.activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ivlogo"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/height30">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:scaleType="fitXY"
                    android:src="@mipmap/logo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivlogo"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/register_universal_margin"
                android:layout_marginRight="@dimen/register_universal_margin"
                android:layout_marginTop="@dimen/height30"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/etUserId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/gray"
                    android:hint="@string/emailId"
                    android:inputType="textEmailAddress"
                    android:maxLength="48"
                    android:maxLines="1"
                    android:textColor="@color/light_black"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/text_size_mid" />

                <EditText
                    android:id="@+id/etUserPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/bottom_text_margin"
                    android:backgroundTint="@color/gray"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/light_black"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/text_size_mid" />

                <TextView
                    android:id="@+id/tvforgot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center"
                    android:layout_marginTop="@dimen/text_margin_minimum"
                    android:gravity="right"
                    android:padding="@dimen/margin5"
                    android:text="@string/forgot"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/text_size_low" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:id="@+id/cb_remember_me"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/blue"
                        android:text="Remember me"
                        android:textColor="@color/blue" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llsignbtn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/buttion_height"
                    android:layout_marginTop="@dimen/margin20"
                    android:background="@drawable/custom_button">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/sign"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/button_text_size_medium" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/logo_margin_top"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_weight="1.1"
                        android:background="@color/light_black"></LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/orlogin"
                            android:textColor="@color/light_black"
                            android:textSize="@dimen/text_size_mid" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@color/light_black"></LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/register_universal_margin"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="@dimen/margin5"
                        android:layout_weight="1"
                        android:backgroundTint="@color/com_facebook_blue"
                        android:background="@drawable/fbback"
                        android:gravity="center"
                        android:orientation="horizontal">
                        <!--                        <FrameLayout-->
                        <!--                            android:id="@+id/frame_fb_login"-->
                        <!--                            android:layout_width="match_parent"-->
                        <!--                            android:layout_height="match_parent">-->
                        <com.facebook.login.widget.LoginButton
                            android:id="@+id/login_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:foreground="@mipmap/ic_btn_fb"
                            android:scaleY="1.1" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/margin5"
                        android:layout_weight="1"
                        android:backgroundTint="#ea4335"
                        android:background="@drawable/button_bg"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <com.google.android.gms.common.SignInButton
                            android:id="@+id/sign_in_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:scaleY="0.8"
                            android:background="@color/light_red"
                            android:foreground="@mipmap/ic_btn_google"
                            android:textAlignment="center" />
                    </LinearLayout>
                </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/llbottom"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:background="@mipmap/login_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/bottom_text_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/register_universal_margin"
                android:gravity="center"
                android:text="@string/dont_account"
                android:textColor="@color/light_black"
                android:textSize="@dimen/text_size_mid" />

            <TextView
                android:id="@+id/tvreg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/text_margin_minimum"
                android:gravity="center"
                android:text="@string/sup"
                android:textColor="@color/light_red"
                android:textSize="@dimen/text_size_mid" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>