<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".view.activity.ForgotActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ivlogo"
                android:layout_width="200dp"
                android:layout_marginTop="@dimen/height20"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:src="@mipmap/logo"
                    android:scaleType="fitXY"
                    android:layout_centerHorizontal="true"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="90dp"
                android:layout_marginTop="@dimen/height20"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="80dp"
                    android:src="@mipmap/lockimg"
                    android:scaleType="fitXY"
                    android:layout_centerHorizontal="true"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/light_red"
                android:text="@string/capsforgot"
                android:textSize="@dimen/button_text_size_medium"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="@dimen/margin10"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/height30"
                android:layout_marginLeft="@dimen/register_universal_margin"
                android:layout_marginRight="@dimen/register_universal_margin"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etForgotEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:layout_marginTop="@dimen/bottom_text_margin"
                    android:textColorHint="@color/gray"
                    android:backgroundTint="@color/gray"
                    android:textSize="@dimen/text_size_mid"
                    android:textColor="@color/light_black"
                    android:maxLines="1"
                    android:maxLength="48"/>

                <LinearLayout
                    android:id="@+id/llSubmit"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/margin20"
                    android:layout_height="@dimen/buttion_height"
                    android:background="@drawable/custom_button">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/button_text_size_medium"
                        android:text="@string/submit"
                        android:layout_gravity="center"
                        android:gravity="center"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:id="@+id/llbottom"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:background="@mipmap/login_bg"
        android:layout_alignParentBottom="true">
    </LinearLayout>

</RelativeLayout>